played with borders and box shadows

--- a/index.html
+++ b/index.html
@@ -63,21 +63,25 @@
     <!-----END sidebar nav-------->
     <section class="about" section id="about">
         <h2>ABOUT</h2>
-        <p> I am an aspiring front-end web developer, interested in uncovering web-based and digital solutions. I feel strongly in free, clear, and open communications, and that digital design and successful web development can provide the most direct route
-            to a relationship between user and product. <br><br> My first career as a public art project manager has provided me with a background of delivering organized and timely results, and working with projects diverse in scale, concept, and setting.
-            I am a strong collaborator and comfortable with a no-glory-given, behind-the scenes producer role. I’m most interested in pursuing team-based opportunities and projects. <br><br> Committed to ongoing education, I have supplemented my BA/MA
-            degrees with a full-stack bootcamp at Academy Pittsburgh, and most recently a front-end focused bootcamp with Moms Can: Code. I hope to work with future teammates who understand the value of knowledge-sharing and continued learning. <br><br>            I am a non-media artist focused on new-media expression. Using time-based constructs, I use found digital objects and footage to create new narratives.
-        </p>
 
-        <ul>SKILLS</ul>
-        <li>HTML / CSS</li>
-        <li>Adobe Suite / Affinity Designer + Photo</li>
-        <li>Final Cut / Premiere</li>
-        <li>Blender / Sketchup</li>
-        <li>Webflow</li>
-        <li> Figma</li>
-        <li>Audacity / Ableton</li>
-
+        <div class="sidebar">
+            <p> I am an aspiring front-end web developer, interested in uncovering web-based and digital solutions. I feel strongly in free, clear, and open communications, and that digital design and successful web development can provide the most direct
+                route to a relationship between user and product. <br><br> My first career as a public art project manager has provided me with a background of delivering organized and timely results, and working with projects diverse in scale, concept,
+                and setting. I am a strong collaborator and comfortable with a no-glory-given, behind-the scenes producer role. I’m most interested in pursuing team-based opportunities and projects. <br><br> Committed to ongoing education, I have supplemented
+                my BA/MA degrees with a full-stack bootcamp at Academy Pittsburgh, and most recently a front-end focused bootcamp with Moms Can: Code. I hope to work with future teammates who understand the value of knowledge-sharing and continued learning.
+                <br><br> I am a non-media artist focused on new-media expression. Using time-based constructs, I use found digital objects and footage to create new narratives.
+            </p>
+        </div>
+        <div class="sidebar skills">
+            <ul>SKILLS</ul>
+            <li>HTML / CSS</li>
+            <li>Adobe Suite / Affinity Designer + Photo</li>
+            <li>Final Cut / Premiere</li>
+            <li>Blender / Sketchup</li>
+            <li>Webflow</li>
+            <li> Figma</li>
+            <li>Audacity / Ableton</li>
+        </div>
     </section>
 
     <section class="resume" section id="resume">
@@ -92,10 +96,10 @@
             <div class="row">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/office.jpg">
+                        <img class="activator" src="assets/placeholder.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Card Somali Bantu Website<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Somali Bantu<i class="material-icons right">more_vert</i></span>
                         <p><a href="#">Under Construction</a></p>
                     </div>
                     <div class="card-reveal">
@@ -112,7 +116,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">HTML EMAIL<i class="material-icons right">more_vert</i></span>
-                        <p><a href="https://codepen.io/k8hansen/pen/ZZxdKz">View the project on Codepen</a></p>
+                        <p><a href="https://codepen.io/k8hansen/pen/ZZxdKz">View on Codepen</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">HTML EMAIL<i class="material-icons right">close</i></span>
@@ -128,11 +132,11 @@
                         <img class="activator" src="assets/newsletterredesign.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">HTML EMAIL REMIX<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">EMAIL REMIX<i class="material-icons right">more_vert</i></span>
                         <p><a href="https://k8hansen.github.io/bakingtry14/">View project</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                        <span class="card-title grey-text text-darken-4">EMAIL REMIX<i class="material-icons right">close</i></span>
                         <p>2019<br><br> Bootcamp project taking another group's pair-programmed html email newsletter and redesigning it. The goal of this assignment was to learn how to parse through other's code to make updates/changes.</p>
                     </div>
                 </div>
@@ -141,10 +145,10 @@
             <div class="row">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/authenticgrace.jpg">
+                        <img class="activator" src="assets/placeholder.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Authentic Grace Ecommerce<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Authentic Grace<i class="material-icons right">more_vert</i></span>
                         <p><a href="https://k8hansen.github.io/authenticgrace/">View the Project</a></p>
                     </div>
                     <div class="card-reveal">
@@ -189,6 +193,22 @@
             </div>
 
             <!--Infographic-->
+            <div class="row">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/office.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">This is a link</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="row">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
