checkin with more content and styles

--- a/index.html
+++ b/index.html
@@ -37,30 +37,31 @@
 -->
 
     <nav>
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Kate</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
-            </ul>
-            <ul class="side-nav" id="mobile-demo">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
+        <div class="nav-wrapper" id="top">
+            <a href="#" class="brand-logo">Kate Hansen</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#resume">RESUME</a></li>
+                <li><a href="#webdesign">WEB + DESIGN</a></li>
+                <li><a href="#art">ART</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
     </nav>
+
+
+
+
+
+
+    <!-----sidebar nav-------->
+
+
+
+    <!-----END sidebar nav-------->
     <main>
 
-        <!-----sidebar nav-------->
-
-
-
-        <!-----END sidebar nav-------->
         <section class="about" section id="about">
             <h2>ABOUT</h2>
 
@@ -85,17 +86,14 @@
             </div>
         </section>
 
-        <section class="resume" section id="resume">
-            <h2>EXPERIENCE</h2>
-        </section>
-
+        <!------------WEBAND DESIGN----------------------->
         <section class="webdesign" section id="webdesign">
             <h2>WEB + DESIGN</h2>
 
             <div class="worsamplecards">
-                <!--First Card-->
+                <!-----BANTU----->
                 <div class="row">
-                    <div class="card">
+                    <div class="card wkcard">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="assets/placeholder.jpg">
                         </div>
@@ -111,7 +109,7 @@
                 </div>
                 <!--Food Candle-->
                 <div class="row">
-                    <div class="card">
+                    <div class="card wkcard">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="assets/foodcandle.jpg">
                         </div>
@@ -126,9 +124,9 @@
                         </div>
                     </div>
                 </div>
-                <!--REMIX-->
+                <!-----REMIX----->
                 <div class="row">
-                    <div class="card">
+                    <div class="card wkcard">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="assets/newsletterredesign.jpg">
                         </div>
@@ -144,9 +142,9 @@
                 </div>
                 <!--Authentic Grace-->
                 <div class="row">
-                    <div class="card">
+                    <div class="card wkcard">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/placeholder.jpg">
+                            <img class="activator" src="assets/authenticgracethumb.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Authentic Grace<i class="material-icons right">more_vert</i></span>
@@ -161,16 +159,16 @@
                 </div>
                 <!--Pittsburgh Artist Registry-->
                 <div class="row">
-                    <div class="card">
+                    <div class="card wkcard">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/office.jpg">
+                            <img class="activator" src="assets/registry.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                            <span class="card-title activator grey-text text-darken-4">Pittsburgh Artist Registry<i class=" material-icons right ">more_vert</i></span>
+                            <p><a href="https://www.pittsburghartistregistry.org/ ">Visit</a></p>
                         </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 ">Card Title<i class="material-icons right ">close</i></span>
                             <p>Here is some more information about this product that is only revealed once clicked on.</p>
                         </div>
                     </div>
@@ -178,76 +176,93 @@
 
                 <!--University of Wyoming-->
                 <div class="row">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/office.jpg">
+                    <div class="card wkcard">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " src="assets/wyomingthumb.jpg">
                         </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Document Design<i class="material-icons right ">more_vert</i></span>
+                            <p>Proprietary Project</p>
                         </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 ">University of Wyoming Public Art Plan<i class="material-icons right ">close</i></span>
+                            <p>100+ page document of the public art plan for the University of Wyoming, written by Renee Piechocki and Jennifer McGregor. This document included standard design elements and custom infographics.</p>
                         </div>
                     </div>
                 </div>
 
-                <!--Infographic-->
+                <!--Infographic Neighborhood Allies-->
                 <div class="row">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/office.jpg">
+                    <div class="card wkcard">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " src="assets/neighborhoodalliesinfographicthumb.jpg">
                         </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Graphic Design<i class="material-icons right ">more_vert</i></span>
+                            <p>Proprietary Projects</p>
+
                         </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 ">Graphic Design Work<i class="material-icons right ">close</i></span>
+                            <p>Graphic design work at the Office of Public Art included print info graphics for project parthers, weekly email event and project headers and web slider design, and any general departmental graphic needs. </p>
                         </div>
                     </div>
                 </div>
-
+                <!--mockup hill district signs-->
                 <div class="row">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/office.jpg">
+                    <div class="card wkcard">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " src="assets/neighborhoodalliesinfographicthumb.jpg">
                         </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Graphic Design<i class="material-icons right ">more_vert</i></span>
+                            <p>Proprietary Projects</p>
+
                         </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 ">Graphic Design Work<i class="material-icons right ">close</i></span>
+                            <p>Graphic design work at the Office of Public Art included print info graphics for project parthers, weekly email event and project headers and web slider design, and any general departmental graphic needs. </p>
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
-            </div>
+
         </section>
 
-        <section class="art" csection id="webdesign">
+        <section class="art" csection id="art">
             <h2>ART</h2>
+            <!----SOLO WORK------>
+            <div class="artrow row">
+                <div class="col s12 m7">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/kateblackandwhite.jpg">
 
-            <div class="worksamplecards">
-                <div class="row">
-                    <div class="card aaart">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="images/office.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">This is a link</a></p>
+                            <span class="card-title">Solo Work</span>
+                            <p></p>
                         </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <div class="card-action">
+                            <a href="#">View</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!----DADPRANKS------>
+            <div class="artrow row">
+                <div class="col s12 m7">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/dadpranksteaser.jpg">
+
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title">Dadpranks</span>
+                            <p>Collaborative video, images, and performances with collective Dadpranks. Members include Lauren Goshinski, Isla Hansen, Elina Malkin, Laura Warman</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">View</a>
                         </div>
                     </div>
                 </div>
@@ -259,18 +274,18 @@
 
 
     <!-----------------CONTACT FORM--------------------->
-    <footer class="contact">
+    <footer class="contact ">
         <h2>CONTACT</h2>
 
-        <div class="socialmedia">
-            <a href="mailto:k8hansen@gmail.com?Subject=I followed a link from your website and here I am" target="_blank"><i class="far fa-envelope"></i></a>
-            <a href="https://www.facebook.com/k8hansen" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="http://www.twitter.com/newgroundsIRL" target="_blank"> <i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/mallpalm/" target="_blank"> <i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/k8hansen/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://codepen.io/k8hansen/" target="_blank"><i class="fab fa-codepen"></i></a>
-            <a href="https://github.com/k8hansen" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://open.spotify.com/user/1259062356?si=SzQe3dGZTHu_bhyRapSGHA" target="_blank"> <i class="fab fa-spotify"></i></a>
+        <div class="socialmedia ">
+            <a href="mailto:k8hansen@gmail.com?Subject=I followed a link from your website and here I am " target="_blank "><i class="far fa-envelope "></i></a>
+            <a href="https://www.facebook.com/k8hansen " target="_blank "><i class="fab fa-facebook-f "></i></a>
+            <a href="http://www.twitter.com/newgroundsIRL " target="_blank "> <i class="fab fa-twitter "></i></a>
+            <a href="https://www.instagram.com/mallpalm/ " target="_blank "> <i class="fab fa-instagram "></i></a>
+            <a href="https://www.linkedin.com/in/k8hansen/ " target="_blank "><i class="fab fa-linkedin-in "></i></a>
+            <a href="https://codepen.io/k8hansen/ " target="_blank "><i class="fab fa-codepen "></i></a>
+            <a href="https://github.com/k8hansen " target="_blank "><i class="fab fa-github "></i></a>
+            <a href="https://open.spotify.com/user/1259062356?si=SzQe3dGZTHu_bhyRapSGHA " target="_blank "> <i class="fab fa-spotify "></i></a>
         </div>
 
 
@@ -280,8 +295,14 @@
 
 
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.js"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script type="text/javascript " src="js/materialize.js "></script>
+    <script type="text/javascript " src="js/scripts.js "></script>
+
+    <script>
+        $(document).ready(function() {
+            $('.sidenav').sidenav();
+        });
+    </script>
 </body>
 
 </html>
