--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:700|Nunito:300,400,800&display=swap" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:700|Roboto:300,400,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 
 
@@ -63,26 +63,34 @@
     <main>
 
         <section class="about" section id="about">
-            <h2>ABOUT</h2>
+            <div class="aboutwrapper">
+                <h2>ABOUT</h2>
+                <div class="sidebar">
 
-            <div class="sidebar">
-                <p> I am an aspiring front-end web developer, interested in uncovering web-based and digital solutions. I feel strongly in free, clear, and open communications, and that digital design and successful web development can provide the most direct
-                    route to a relationship between user and product. <br><br> My first career as a public art project manager has provided me with a background of delivering organized and timely results, and working with projects diverse in scale, concept,
-                    and setting. I am a strong collaborator and comfortable with a no-glory-given, behind-the scenes producer role. I’m most interested in pursuing team-based opportunities and projects. <br><br> Committed to ongoing education, I have
-                    supplemented my BA/MA degrees with a full-stack bootcamp at Academy Pittsburgh, and most recently a front-end focused bootcamp with Moms Can: Code. I hope to work with future teammates who understand the value of knowledge-sharing
-                    and continued learning.
-                    <br><br> I am a non-media artist focused on new-media expression. Using time-based constructs, I use found digital objects and footage to create new narratives.
-                </p>
+                    <p> I am an aspiring front-end web developer, interested in uncovering web-based and digital solutions. I feel strongly in free, clear, and open communications, and that digital design and successful web development can provide the most
+                        direct route to a relationship between user and product. <br><br> My first career as a public art project manager has provided me with a background of delivering organized and timely results, and working with projects diverse in
+                        scale, concept, and setting. I am a strong collaborator and comfortable with a no-glory-given, behind-the scenes producer role. I’m most interested in pursuing team-based opportunities and projects. <br><br> Committed to ongoing
+                        education, I have supplemented my BA/MA degrees with a full-stack bootcamp at Academy Pittsburgh, and most recently a front-end focused bootcamp with Moms Can: Code. I hope to work with future teammates who understand the value
+                        of knowledge-sharing and continued learning.
+                        <br><br> I am a non-media artist focused on new-media expression. Using time-based constructs, I use found digital objects and footage to create new narratives.
+                    </p>
+                </div>
             </div>
-            <div class="sidebar skills">
-                <ul>SKILLS</ul>
-                <li>HTML / CSS</li>
-                <li>Adobe Suite / Affinity Designer + Photo</li>
-                <li>Final Cut / Premiere</li>
-                <li>Blender / Sketchup</li>
-                <li>Webflow</li>
-                <li> Figma</li>
-                <li>Audacity / Ableton</li>
+            <div class="skillswrapper">
+                <h2>skills</h2>
+                <div class="sidebar skills">
+
+                    <div class="line">
+
+                    </div>
+                    <li>HTML / CSS</li>
+                    <li>Adobe Suite / Affinity Designer + Photo</li>
+                    <li>Final Cut / Premiere</li>
+                    <li>Blender / Sketchup</li>
+                    <li>Webflow</li>
+                    <li> Figma</li>
+                    <li>Audacity / Ableton</li>
+                </div>
             </div>
         </section>
 
