checkpoint, fixed art page and added workshop section

--- a/index.html
+++ b/index.html
@@ -18,38 +18,7 @@
 <body>
 
 
-    <!-----NAVIGATION------>
-    <!--works
-   
-    <nav>
-        <div class="nav-wrapper" id="top">
-            <a href="#" class="brand-logo">Kate Hansen</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#resume">RESUME</a></li>
-                <li><a href="#webdesign">WEB + DESIGN</a></li>
-                <li><a href="#art">ART</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
-        </div>
-    </nav>
-
-
-    <nav>
-        <div class="nav-wrapper" id="top">
-            <a href="#" class="brand-logo">Kate Hansen</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#resume">RESUME</a></li>
-                <li><a href="#webdesign">WEB + DESIGN</a></li>
-                <li><a href="#art">ART</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
-        </div>
-    </nav>
--->
+    <!----------NAVIGATION------------->
     <nav>
         <div class="nav-wrapper" id="top">
             <a href="#!" class="brand-logo">KATE HANSEN</a>
@@ -57,8 +26,9 @@
             <ul class="right hide-on-med-and-down">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
-                <li><a href="#resume">RESUME</a></li>
+                <li><a href="2019_HANSEN_Resume.pdf" type="pdf" target="_blank">RESUME</a></li>
                 <li><a href="#webdesign">WEB + DESIGN</a></li>
+                <li><a href="#blogsnworkshops">WRITING + WKSHPS</a></li>
                 <li><a href="#art">ART</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
@@ -68,28 +38,27 @@
     <ul class="sidenav" id="mobile-demo">
         <li><a href="index.html">HOME</a></li>
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="#resume">RESUME</a></li>
+        <li><a href="2019_HANSEN_Resume.pdf" type="pdf" target="_blank">RESUME</a></li>
         <li><a href="#webdesign">WEB + DESIGN</a></li>
+        <li><a href="#blogsnworkshops">WRITING + WKSHPS</a></li>
         <li><a href="#art">ART</a></li>
         <li><a href="#contact">CONTACT</a></li>
     </ul>
 
-
-
-
-
-    <!-----sidebar nav-------->
-
-
-
-    <!-----END sidebar nav-------->
     <main>
+        <!---INTRO-->
+
+        <!-----END sidebar nav-------->
+
 
         <section id="about">
             <div class="row">
                 <div class="col m12 l9 aboutwrapper">
                     <h2>ABOUT</h2>
                     <div class="sidebar">
+                        <div class="portrait">
+                            <img class="imgportrait" src="assets/k8web.jpg" alt="Kate">
+                        </div>
                         <p> I am an aspiring front-end web developer, interested in uncovering web-based and digital solutions. I feel strongly in free, clear, and open communications, and that digital design and successful web development can provide the
                             most direct route to a relationship between user and product.</p>
                         <p>My first career as a public art project manager has provided me with a background of delivering organized and timely results, and working with projects diverse in scale, concept, and setting. I am a strong collaborator and comfortable
@@ -136,10 +105,13 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">
-                                Card Title
+                                    Freelance Work
+                                    
                                 <i class="material-icons right">close</i>
+                                <p>2019</p>
                             </span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+
+                            <p>Web experience for client Lindsey Scherloum, documenting her work as artist-in-residence with the Somali Bantu refugee community in Pittsburgh. <br><br> Designed in Webflow.</p>
                         </div>
                     </div>
                 </div>
@@ -156,7 +128,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">HTML EMAIL<i class="material-icons right">close</i></span>
-                            <p>2019</p>
+                            <p>Moms Can Code School, 2019</p>
                             <p>Co-designed with Stephanie McInelly. This was a bootcamp assignment to create a fake html newsletter using pair programming processes. The goal of the assigment was to learn how to create an HTML email with css inline, and
                                 to learn how to work with a collaborator to pair program.</p>
                             <p>The concept of this newsletter was all food-scented candle-related news, an nonsensical response to somber headlines and newsletters.</p>
@@ -202,7 +174,8 @@
                             </span>
                             <p>Authentic Grace</p>
                             <p>2019</p>
-                            <p>Pair Programmed with Stephanie McInelly. This project was a ootcamp excercise to design an MVP for a small brick-and-morter store seeking to expand into online sales. Built homepage, product section, and product feature pages.</p>
+                            <p>Pair Programmed with Stephanie McInelly. This project was a ootcamp excercise to design an MVP for a small brick-and-morter store seeking to expand into online sales. Built homepage, product section, and product feature pages.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -300,6 +273,10 @@
                 </div>
             </div>
         </section>
+        <!-- -----------WRITING AND WORKSHIPS --------- -->
+        <section id="blogsnworkshops">
+            <h2>WRITING + WKSHPS</h2>
+        </section>
 
         <section id="art">
             <h2>ART</h2>
@@ -308,14 +285,14 @@
                 <div class="col s12 m6">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/kateblackandwhite.jpg">
+                            <img src="assets/katework.png">
                         </div>
                         <div class="card-content">
                             <span class="card-title">Solo Work</span>
-                            <p></p>
+                            <p>Indiviual video + new media work.</p>
                         </div>
                         <div class="card-action">
-                            <a href="#">View</a>
+                            <a href="art.html#soloart">View</a>
                         </div>
                     </div>
                 </div>
@@ -323,14 +300,14 @@
                 <div class="col s12 m6">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/dadpranksteaser.jpg">
+                            <img src="assets/dadprankssamm.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title">Dadpranks</span>
-                            <p>Collaborative video, images, and performances with collective Dadpranks. Members include Lauren Goshinski, Isla Hansen, Elina Malkin, Laura Warman</p>
+                            <p>Collaborative video, images, and performances.</p>
                         </div>
                         <div class="card-action">
-                            <a href="#">View</a>
+                            <a href="art.html#dadpranks">View</a>
                         </div>
                     </div>
                 </div>
