--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
@@ -45,12 +47,11 @@
         <li><a href="#contact">CONTACT</a></li>
     </ul>
 
+
+
+    <!-----END  NAVIGATION-------->
+
     <main>
-        <!---INTRO-->
-
-        <!-----END sidebar nav-------->
-
-
         <section id="about">
             <div class="row">
                 <div class="col m12 l9 aboutwrapper">
@@ -273,10 +274,58 @@
                 </div>
             </div>
         </section>
-        <!-- -----------WRITING AND WORKSHIPS --------- -->
+        <!-- -----------WRITING AND WORKSHoPS --------- -->
         <section id="blogsnworkshops">
-            <h2>WRITING + WKSHPS</h2>
+            <h2>WRITING + WORKSHOPS</h2>
+
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card #FA7268 darken-1">
+                        <div class="card-content gray-text">
+                            <span class="card-title">BLOG POST: "Trying on a Text Editor"</span>
+                            <p>"Text editors are basically the underwear of programming. Are you a boy-shorts, bikini cut, or simple cotton granny panty kind of gal? Just as there is no “best” kind of panty, selecting a text editor is a similar matter of
+                                personal taste..."</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">Read more</a>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col s12 m6">
+                    <div class="card coral darken-1">
+                        <div class="card-content gray-text">
+                            <span class="card-title">BLOG POST: "Agendas: Every Meeting’s Secret Sauce"</span>
+                            <p>"...A few minutes of preparation can be the difference between an efficient meeting or a waste of everyone’s time."</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">Read more</a>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col s12 m6">
+                    <div class="card coral darken-1">
+                        <div class="card-content gray-text">
+                            <span class="card-title">WEBCAST</span>
+                            <p>"Quick and dirty intro to Figma wireframing, presented June 3, 2019 via Moms Can: Code School."</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="https://zoom.us/recording/play/0GPctiBoaTykaXkC05n_2kYVWC2O3NjN1LSiMR7qZNbblbwgDL2PvYEAENVDliUn?startTime=1559581032000">Watch</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
+
 
         <section id="art">
             <h2>ART</h2>
